[workspace]
resolver = "2"
members = [
  "crates/types",
  "crates/core",
  "crates/solver-milp",
  "crates/jobs",
  "crates/api",
  "crates/solver-heur",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["poliukhovych <poliukhovych@knu.ua>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde_with = "3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
good_lp = { version = "1", features = ["coin_cbc"] }
rand = "0.8"
rand_chacha = "0.3"

http = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "limit", "timeout"] }

proptest = "1"
insta = { version = "1", features = ["yaml"] }
criterion = { version = "0.5", default-features = false }
