[package]
name = "solver-heur"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
types = { path = "../types" }
sched-core = { path = "../core" }
serde_json = "1.0.143"
